# TP2

./: CMakeLists.txt  README.md  eleitores.txt  eleitores2.txt  main.cpp  prefeitos.txt  vereadores.txt
base/: exception_invalid_format.cpp  exception_invalid_format.h  global.cpp  global.h  menu.cpp  opcao_menu.h
controllers/: controller_votacao.cpp  controller_votacao.h
domain/: candidato.cpp  candidato.h  eleitor.cpp  eleitor.h  prefeito.cpp  prefeito.h  state.cpp  state.h  vereador.cpp  vereador.h
features/cadastro/candidatos/controllers/: controller_candidato.cpp  controller_candidato.h  controller_dados_candidato.cpp  controller_dados_candidato.h
features/cadastro/candidatos/menus/: menu_candidato.cpp  menu_candidato.h  menu_editar_candidato.cpp  menu_editar_candidato.h
features/cadastro/controllers/: controller_dados_eleitor.cpp  controller_dados_eleitor.h
features/cadastro/eleitores/controllers/: controller_eleitor.cpp  controller_eleitor.h  eleitor_controller.h
features/cadastro/eleitores/menus/: menu_editar_eleitor.cpp  menu_editar_eleitor.h  menu_eleitor.cpp  menu_eleitor.h
features/cadastro/menus/: menu_cadastro.cpp  menu_cadastro.h
features/resultados/controllers/: controller_contar_votos.cpp  controller_contar_votos.h  controller_resultados.cpp  controller_resultados.h
features/resultados/menus/: menu_contar_votos.cpp  menu_contar_votos.h  menu_resultados.cpp  menu_resultados.h
features/votacao/controllers/: controller_votacao.cpp  controller_votacao.h
initializers/: main_initializer.cpp  main_initializer.h
menus/: menu_inicial.cpp  menu_inicial.h  menu_resultados.cpp  menu_resultados.h
